# launchd-me

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  logo.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: github_workflow.yaml
.github/workflows/: github_workflow.yaml  github_workflow_all_install.yaml
docs/: API.md  about.md  api.md  faqs.md  home.md  index.md  maintainer.md  user_guide.md  what_is_launchd.md
src/launchd_me/: __init__.py  __main__.py  cli.py  example.py  exceptions.py  logger_config.py  plist.py  plist_creator.py  sql_commands.py  sql_statements.py
src/launchd_me.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/launchd_me/templates/: logo.py  plist_template.txt
tests/: conftest.py  test_integration_plist.py  test_plist.py  test_unit_cli.py  test_unit_plist.py
