[project]
name = "launchd-me"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ldm = "launchd_me.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# [tool.ruff]
# select = ["ALL"]
